--- a/app/views/shared/_sidenavbar.html.erb
+++ b/app/views/shared/_sidenavbar.html.erb
@@ -3,7 +3,7 @@
     <div class="sidebar-header">
         <div class = 'profile-userpic' >
             <img src="assets/foodWallpaper-7ead1f7f94db01b8ac2d12484477b0153b1e29e9baf545c70a1d4cd453501a93.jpg" alt="profilepic" height="128" width="128">
-            <p style = "padding-top: 10px;">Dummy Name</p>   
+            <p style = "padding-top: 10px;">Dummy Name</p>
         </div>
     </div>
     <ul class="list-unstyled components" style = "text-align: center !important;">
@@ -27,7 +27,7 @@
             <% end %>
         </li>
         <li>
-            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #233d63;', data: {turbolinks: false} do %>
+            <%= link_to chatmessages_path, class: 'btn sidebar-btn', style: 'background-color: #233d63;', data: {turbolinks: false} do %>
                 <%= fa_icon('comment 2x')%>
                 <b>Lobby Chat</b>
             <% end %>
