--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,11 @@
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= action_cable_meta_tag %>
 
-    <%= stylesheet_link_tag    :application, media: 'all', 'data-turbolinks-track': 'true' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'true' %>
+
+    <%= stylesheet_link_tag    :application, media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
   </head>
 
@@ -25,7 +27,7 @@
     <% render 'shared/alerts' %>
 
     <main role="main">
-      
+
 
       <% if user_signed_in? %>
         <div class = "wrapper">
