Fixed Home Page after loggin in

--- a/app/views/shared/_sidenavbar.html.erb
+++ b/app/views/shared/_sidenavbar.html.erb
@@ -9,19 +9,19 @@
     <ul class="list-unstyled components" style = "text-align: center !important;">
 
         <li>
-            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #1853ab;', data: {turbolinks: false} do %>
+            <%= link_to root_path, class: 'btn sidebar-btn', style: 'background-color: #1853ab;', data: {turbolinks: false} do %>
                 <%= fa_icon('shopping-cart 2x')%>
                 <b>Food</b>
             <% end %>
         </li>
         <li>
-            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #1f4e94;', data: {turbolinks: false} do %>
+            <%= link_to root_path, class: 'btn sidebar-btn', style: 'background-color: #1f4e94;', data: {turbolinks: false} do %>
                 <%= fa_icon('child 2x')%>
                 <b>Entertainment</b>
             <% end %>
         </li>
         <li>
-            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #23477d;', data: {turbolinks: false} do %>
+            <%= link_to root_path, class: 'btn sidebar-btn', style: 'background-color: #23477d;', data: {turbolinks: false} do %>
                 <%= fa_icon('plus-square 2x')%>
                 <b>Support</b>
             <% end %>
@@ -33,7 +33,7 @@
             <% end %>
         </li>
         <li>
-            <%= link_to main_path, class: 'btn sidebar-btn', style: 'background-color: #1f2d41;', data: {turbolinks: false} do %>
+            <%= link_to root_path, class: 'btn sidebar-btn', style: 'background-color: #1f2d41;', data: {turbolinks: false} do %>
                 <%= fa_icon('phone 2x')%>
                 <b>Contact Us</b>
             <% end %>
