--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="navbar fixed-top" >
       <% if user_signed_in? %>
         <li class = "navbar-brand">
-          <%= link_to '4Students', main_path, style: 'font-size: 30px;', data: {turbolinks: false} %>
+          <%= link_to '4Students', root_path, style: 'font-size: 30px;', data: {turbolinks: false} %>
         </li>
         <li class = "nav-item" style = "padding-left: 15px;">
           <%= link_to "Sign Out", destroy_user_session_path, :method => :delete, data: {turbolinks: false}, style: "float:right;" %>
