Added Contact Us

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -119,6 +119,7 @@ body {
   box-shadow: 0 4px 10px -2px #000000 !important; 
   text-decoration: none !important;
   list-style-type: none;
+  width: 100%;
 }
 
 .navbar-brand {
