--- a/app/views/shared/_sidenavbar.html.erb
+++ b/app/views/shared/_sidenavbar.html.erb
@@ -33,7 +33,7 @@
             <% end %>
         </li>
         <li>
-            <%= link_to root_path, class: 'btn sidebar-btn', style: 'background-color: #1f2d41;', data: {turbolinks: false} do %>
+            <%= link_to contact_path, class: 'btn sidebar-btn', style: 'background-color: #1f2d41;', data: {turbolinks: false} do %>
                 <%= fa_icon('phone 2x')%>
                 <b>Contact Us</b>
             <% end %>
