Added Style to Contact/LobbyChat page

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,24 +1,29 @@
 .container-form{
-  border: 3px solid #1fd660;
-  margin-bottom: 15%;
-  margin-top: 15%;
+  // border: 3px solid #1fd660;
+  margin-bottom: auto;
+  margin-top: 5%;
   border-radius: 5px;
-  background-color: #1f2d41;
+  width: 50% !important;
+  // background-color: #1f2d41;
   // text-align: center;
-  box-shadow: 0 4px 10px -2px #000000; 
-
+  // box-shadow: 0 4px 10px -2px #000000; 
+}
   .form-header{
     font-family: "Metropolis Bold";
     color: #1fd660;
+    
   }
   .form-control{
-    // color: #1fd660;
-    // width: 50%;
-    // margin: auto;
+    background-color: #1f2d41 !important;
+    border: none !important;
+    width: 100% !important;
+    resize:none;
+    box-shadow: none !important;
   }
   .form-label{
     font-family: "Metropolis Regular";
     color: #1fd660;
+    // margin-right: 5% !important;
   }
 
   .devise-links{
@@ -30,4 +35,4 @@
     font-family: "Metropolis Regular";
     color: #1fd660;
   }
-}
+
