--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -169,6 +169,8 @@ body {
   color: #1f2d41;
   border-radius: 50rem;
   font-size: 15px;
+  margin-top: 10px;
+  height: 40px;
   // padding-right: 15px;
   // padding-left: 15px;
 }
