--- a/app/views/chat_messages/_chat_message.html.erb
+++ b/app/views/chat_messages/_chat_message.html.erb
@@ -1,3 +1,8 @@
-[<%=chat_message.created_at.to_s(:db)%> <%=chat_message.user.email%>]
-<%=chat_message.message%>
-<br>
+<div >
+
+    <span style = "color:green"><%= chat_message.user.email %>:</span>
+    <%=chat_message.message%>
+    <% chat_message.created_at.to_s(:db)%> 
+    <br>
+    <br>
+</div>
