--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,22 +1,27 @@
-<h1 class = "text">Contact Page</h1>
-
+<div class = 'container container-form ml-35 mr-35'>
+    <h1 class = "form-header contact-header">Contact Us</h1>
     <div id = 'contact'>
-    <%= form_for @message, url: contact_create_path, remote: true do |f| %>
-        <div class="col-md-6">
-        <%= f.label :name %></br>
-        <%= f.text_field  :name, required: true, class: "contact-form-text-area" %></br>
+        <%= form_for @message, url: contact_create_path, remote: true do |f| %>
+        
 
-        <%= f.label :email %></br>
-        <%= f.text_field :email, required: true, class: "contact-form-text-area" %></br>
+        <%= f.label :name ,class: 'form-label'%>
+        <%= f.text_field  :name, required: true, class: "form-control", 
+                        style:'color: white;'%>
+        <br>
 
-        <%= f.label :body %></br>
-        <%= f.text_area :body, rows: 8, cols: 40, required: true, class: "contact-form-text-area",
-                        placeholder: "Send me a message"%></br>
+        <%= f.label :email ,class: 'form-label'%>
+        <%= f.text_field :email, required: true, class: "form-control", 
+                        style:'color: white;'%>
+        <br>
 
-        <%= f.submit 'Send Message', class: 'btn btn-primary' %>
+        <%= f.label 'Message' ,class: 'form-label'%>
+        <%= f.text_area :body, rows: 8, cols: 40, required: true, class: "form-control",
+                        style:'color: white;'%>
+        <br>
+        <%= f.submit 'Send Message', class: 'round-btn', style: 'margin-bottom: 10px;' %>
+
+    <% end %>
+    <div class="col-md-6" id="flash-message">
+        <%= render 'shared/flash' %>
     </div>
-  <% end %>
-  <div class="col-md-6" id="flash-message">
-    <%= render 'shared/flash' %>
-  </div>
-    </div>
+</div>
