--- a/app/assets/stylesheets/chatmessages.scss
+++ b/app/assets/stylesheets/chatmessages.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .alert.alert-success{
   width:100%;
-  margin-right: 500px;
+  // margin-right: 500px;
   text-align: center;
 }
 
