--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -1,4 +1,17 @@
 .contact-header{
-    display: flex;
+    display: inline-block;
     width: 100%;
+}
+
+.alert-heading-icon{
+    // width: 100%;
+    color: #f3f3f3;
+    // height: 100%;
+    // top: 50%;
+    // bottom: 50%;
+    // position: relative;
+    // transform: translate(50%)
+
+
+
 }
