--- a/app/views/chatmessages/show.html.erb
+++ b/app/views/chatmessages/show.html.erb
@@ -1,9 +1,8 @@
-<div class="container container-form">
-
+<div class="container container-form ml-35 mr-35">
   <div class="row">
     <div class="form-header">
-      <h1 class="alert-heading">Chat Room</h1>
-      <p>Go on! Socialize</p>
+      <h1 class = "alert-heading">Chat Room</h1>
+
     </div>
   </div>
 
@@ -15,16 +14,18 @@
     </div>
   </div>
   <div class = "row" style = "margin-top: 10px;">
+      <div class = 'wrapper'>
+        <div class="input-group" style="float:left; width: 100%;">
+          <%= simple_form_for(@chatmessage, url: chatmessages_create_url, remote: true) do |f| %>
+          <%= f.text_field :message, required: true, placeholder: 'Say something', class: 'form-control', style:'color:white; ' %>
+        </div>
 
-    <div class="input-group mb-3" style="float:left;">
-    <%= simple_form_for(@chatmessage, url: chatmessages_create_url, remote: true) do |f| %>
-    <%= f.text_field :message, required: true, placeholder: 'Say something', class: 'form-control', style:'color:white' %>
-    </div>
-
-    <div class="input-group-append" style="float:left;">
-      <%= f.submit "Send", class: "btn btn-secondary" %>
-    </div>
-
+        <div class="input-group-append" style="float:right;">
+          <%= button_tag(class: 'round-btn', style: 'border-radius: 5px; height: 34px; width: 34px;') do %>
+            <%= fa_icon 'arrow-right', style: 'border-radius: 45rem;'%>
+          <% end %>
+        </div>
+      </div>
     <% end %>
   </div>
 </div>
