Added Google Maps

--- a/app/assets/stylesheets/sidenavbar.scss
+++ b/app/assets/stylesheets/sidenavbar.scss
@@ -107,6 +107,7 @@
         box-shadow: -5px 0px 0px 0px white;
     }
     i{ 
+        top: 0;
         color: #f3f3f3;
         -o-transition: all .2s linear;
         -moz-transition: all .2s linear;
