--- a/app/views/shared/_sidenavbar.html.erb
+++ b/app/views/shared/_sidenavbar.html.erb
@@ -21,7 +21,7 @@
             <% end %>
         </li>
         <li>
-            <%= link_to root_path, class: 'btn sidebar-btn', style: 'background-color: #23477d;', data: {turbolinks: false} do %>
+            <%= link_to support_path, class: 'btn sidebar-btn', style: 'background-color: #23477d;', data: {turbolinks: false} do %>
                 <%= fa_icon('plus-square 2x')%>
                 <b>Support</b>
             <% end %>
