Fixed Css/Added extension to google map

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -54,12 +54,11 @@
 footer {
   font-family: 'Metropolis Regular';
   // border-top: 2px solid #1fd660;
-  bottom: 0;
   width: 100%;
   display: block;
   background-color: #1f2d41;
   text-align: center;
-  // position: fixed;
+  position: relative;
     div {
       color: #1fd660;
 
