--- a/app/views/chatmessages/show.html.erb
+++ b/app/views/chatmessages/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container container-form ml-35 mr-35">
+<div class="container container-form">
   <div class="row">
     <div class="form-header">
       <h1 class = "alert-heading">Chat Room</h1>
