--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,4 +1,4 @@
-<div id = 'contact-page' class = 'container container-form ml-35 mr-35'>
+<div id = 'contact-page' class = 'container container-form'>
     <div class = 'form-header wrapper'>
         <h1 class = "form-header contact-header">Contact Us</h1> 
         <div class = "alert-heading-icon" style = "left: 0;">
