--- a/app/views/shared/_sidenavbar.html.erb
+++ b/app/views/shared/_sidenavbar.html.erb
@@ -39,5 +39,7 @@
             <% end %>
         </li>
     </ul>
-
+     <button type="button" id="sidebarCollapse" class = "sidebar-button-rotate">
+            <%= fa_icon('long-arrow-left 2x')%>
+    </button>
 </nav>
