--- a/app/assets/stylesheets/sidenavbar.scss
+++ b/app/assets/stylesheets/sidenavbar.scss
@@ -4,14 +4,13 @@
 
 .wrapper {
     display: flex;
-    width: 100%;
+    // width: 100%;
     align-items: stretch;
 }
 
 #sidebar {
-    height: 900px;
-    min-width: 250px;
-    max-width: 250px;
+    min-height: 100vh;
+    width: 250px;
     background: #f3f3f3;
     color: #fff;
     transition: all 0.3s;
@@ -96,16 +95,20 @@
 
 .sidebar-button-rotate{
     background: transparent;
-    // position: absolute;  
-    top: 0;
-    margin-left: 5px;
-    bottom: 0;
+    position: absolute;  
+    top: 65px;
     outline: 0;
     border: 0px;   
+    left: 250px;
 
     :hover{
         box-shadow: -5px 0px 0px 0px white;
     }
+
+    -o-transition: all .2s linear;
+    -moz-transition: all .2s linear;
+    -webkit-transition: all .2s linear;
+    transition: all .2s linear;
     i{ 
         top: 0;
         color: #f3f3f3;
@@ -119,12 +122,14 @@
 }
 
 .sidebar-button-rotate.rotate{
+    left: 0;
 
     i{
         -o-transform: rotateY(-180deg);
         -moz-transform: rotateY(-180deg);
         -webkit-transform: rotateY(-180deg);
         transform: rotateY(-180deg);
+
         
     }
     
@@ -151,15 +156,20 @@
     }
     #sidebar.active {
         margin-left: 0;
+        width: 100vw;
     }
     .sidebar-button-rotate{
+        left: 0;
+
+        :hover{
+            box-shadow: none;
+        }
         -o-transition: all .2s linear;
         -moz-transition: all .2s linear;
         -webkit-transition: all .2s linear;
         transition: all .2s linear;
         transform: rotateY(-180deg);
     }
-
 }
 
 .profile-userpic{
