Added nearby places google map

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,6 @@
 
     
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%=ENV['google_api_key']%>&libraries=places&callback=initMap"></script>  
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7JLWw_7dUfAN0YhA_X3TyKULfu4SofAI&libraries=places&callback=initMap"></script>  
   </body>
 </html>
