Fixed a login bug

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -54,6 +54,6 @@
     </div>
   </div>
   <!-- Sign Up Form -->
-  <div data-aos = "fade-up" data-aos-delay = "200" data-aos-duration = "1000" class = 'container container-form mr-35 ml-35' style = "margin-top: 15% !important; margin-bottom: 15% !important;" id='sign-up-form' >
+  <div data-aos = "fade-up" data-aos-delay = "200" data-aos-duration = "1000" class = 'container container-form-device mr-35 ml-35' style = "margin-top: 15% !important; margin-bottom: 15% !important;" id='sign-up-form' >
     <%= render "devise/registrations/new"%>
   </div>
