--- a/app/views/support/show.html.erb
+++ b/app/views/support/show.html.erb
@@ -1,4 +1,7 @@
-<% @client = GooglePlaces::Client.new(ENV['google_api_key']) %>
-
 <div id = "map"></div>
+
+<div class = "list-of-hospitals">
+    <ul id = 'details-of-hospital' class = "details-of-hospital">
+    </ul>
+</div>
 
