--- a/app/views/support/show.html.erb
+++ b/app/views/support/show.html.erb
@@ -1,7 +1,11 @@
-<div id = "map"></div>
-
-<div class = "list-of-hospitals">
-    <ul id = 'details-of-hospital' class = "details-of-hospital">
-    </ul>
+<div class = "support-section">
+    <div id = "map"></div>
+    <div class = "list-of-hospitals">
+        <ul id = 'details-of-hospital' class = "details-of-hospital">
+        </ul>
+    </div>
 </div>
+
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7JLWw_7dUfAN0YhA_X3TyKULfu4SofAI&libraries=places&callback=initMap"></script>  
+
 
