Added Random Recipe Generation

--- a/app/views/shared/_sidenavbar.html.erb
+++ b/app/views/shared/_sidenavbar.html.erb
@@ -2,14 +2,14 @@
 <nav id="sidebar">
     <div class="sidebar-header">
         <div class = 'profile-userpic' >
-            <img src="assets/foodWallpaper-7ead1f7f94db01b8ac2d12484477b0153b1e29e9baf545c70a1d4cd453501a93.jpg" alt="profilepic" height="128" width="128">
+            <img src="assets/gradient2.jpg" alt="profilepic" height="128" width="128">
             <p style = "padding-top: 10px;">Dummy Name</p>
         </div>
     </div>
     <ul class="list-unstyled components" style = "text-align: center !important;">
 
         <li>
-            <%= link_to root_path, class: 'btn sidebar-btn', style: 'background-color: #1853ab;', data: {turbolinks: false} do %>
+            <%= link_to food_path, class: 'btn sidebar-btn', style: 'background-color: #1853ab;', data: {turbolinks: false} do %>
                 <%= fa_icon('shopping-cart 2x')%>
                 <b>Food</b>
             <% end %>
