--- a/app/assets/stylesheets/sidenavbar.scss
+++ b/app/assets/stylesheets/sidenavbar.scss
@@ -96,7 +96,7 @@
 .sidebar-button-rotate{
     background: transparent;
     position: absolute;  
-    top: 65px;
+    top: 50%;
     outline: 0;
     border: 0px;   
     left: 250px;
@@ -160,10 +160,12 @@
     }
     .sidebar-button-rotate{
         left: 0;
+        top: 65px;
 
         :hover{
             box-shadow: none;
         }
+        
         -o-transition: all .2s linear;
         -moz-transition: all .2s linear;
         -webkit-transition: all .2s linear;
