--- a/app/assets/stylesheets/sidenavbar.scss
+++ b/app/assets/stylesheets/sidenavbar.scss
@@ -96,7 +96,7 @@
 .sidebar-button-rotate{
     background: transparent;
     position: absolute;  
-    top: 50%;
+    top: 65px;
     outline: 0;
     border: 0px;   
     left: 250px;
