--- a/app/views/food/show.html
+++ b/app/views/food/show.html
@@ -7,9 +7,24 @@
 
     <div class = "random-recipe">
         <div class = "cuisine-search-section">
-            <button id = "cuisine-btn" class = "cuisine-search-btn round-btn"> Generate Random 
-            </button>
-            <input type = "text" id = "cuisine-input">
+            <div class = "cuisine-search-section-top"> 
+                <button id = "cuisine-btn" class = "cuisine-search-btn round-btn"> Generate Random </button>
+                <input type = "text" id = "cuisine-input" placeholder = "Search Cuisine">
+            </div>
+            <div class = "cuisine-search-section-bottom">
+                <!-- <label class = "form-label"> Cheap
+                    <input id = "recipe-cheap-checkbox" type="checkbox">
+                    <span class="checkmark"></span>
+                </label> -->
+
+                <label class = "form-label"> Vegeterian
+                    <input id = "recipe-vegetarian-checkbox" type="checkbox">
+                    <span class="checkmark"></span>
+                <label class = "form-label"> Dessert
+                    <input id = "recipe-dessert-checkbox" type="checkbox">
+                    <span class="checkmark"></span>
+                </label>
+            </div>
         </div>
 
         <div class = "list-of-recipies">
