--- a/app/assets/stylesheets/deviceforms.scss
+++ b/app/assets/stylesheets/deviceforms.scss
@@ -5,5 +5,12 @@
     margin-top: 5%;
     border-radius: 5px;
     position: relative;
-    
+
+  }
+
+  .alert {
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+    margin-bottom: 15px;
   }
