--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,18 +1,15 @@
 <header>
   <nav class="navbar fixed-top" >
+      <li class = "navbar-brand">
+        <%= link_to '4Students', root_path, style: 'font-size: 30px;position:absolute;top: 20px;', data: {turbolinks: false} %>
+      </li>
       <% if user_signed_in? %>
-        <li class = "navbar-brand">
-          <%= link_to '4Students', root_path, style: 'font-size: 30px;', data: {turbolinks: false} %>
-        </li>
         <li class = "nav-item" style = "padding-left: 15px;">
           <%= link_to "Sign Out", destroy_user_session_path, :method => :delete, data: {turbolinks: false}, style: "float:right;" %>
         </li>
 
-        
+
       <% else %>
-      <li class = "navbar-brand">
-        <%= link_to '4Students', root_path, style: 'font-size: 30px;', data: {turbolinks: false} %>
-      </li>
         <li class = "nav-item">
           <%= link_to "Login", new_user_session_path, :method => :get, data: {turbolinks: false}, style: "float:right;" %>
         </li>
