--- a/app/assets/stylesheets/food.scss
+++ b/app/assets/stylesheets/food.scss
@@ -5,22 +5,128 @@
     align-items: stretch;
     flex: 1;
     min-width: calc(100vw - 250px);
+
+    .food-section-text{
+        position: absolute;
+        top: 40%;
+        left: 42%;
+        max-width: 500px;
+        p{
+            // color: #111a26;
+            color: grey;
+            font-size: 30px;
+            font-style: italic;
+            font-family: 'Times New Roman';
+        }
+    }
 }
 
 .recipes-list{
     flex: 3;
     // border-right: 2px solid white;
-    height: 100vh;
+    height: 100%;
+    margin: 3%;
+    flex-direction: column;
+    display: flex;
+
+    .recipe-search-section{
+        display: flex;
+        
+        .recipe-search-btn{
+            flex:1;
+            max-width: 185px !important;
+        }
+
+        .recipe-input{
+            flex:2;
+            background-color: #1f2d41 !important;
+            resize: none;
+            outline: none;
+            border: none !important;
+            border-radius: 5px;
+            color: white;
+            margin-left: 10px;
+        }
+
+        
+    }
+
+    .list-of-searched-recipes{
+        overflow-y: scroll;
+        max-height: 100vh;
+        margin-top: 9%;
+
+        #details-of-searched-recipes{
+            list-style-type: none;
+            padding-left: 0 !important;
+            padding-bottom: 0 !important;
+
+            .recipes-container{
+                display: flex;
+                height: 100%;
+                // margin: 5%;
+                // border: 1px solid green;
+
+                .recipe-container-vertical{
+                    flex: 1;
+                    min-height: 400px;
+                    border: 1px solid #1fd660;
+                    margin: 10px;
+                    // background-color: #2b3f5c;
+                    
+                    li{
+                        color: white;
+                    }
+                }
+
+                .recipe-container-horizontal{
+                    margin: 10px;
+                    display: flex;
+                    flex-direction: column;
+                    flex: 2;
+                    height: 100%;
+                    max-height: 400px;
+                    
+
+
+                    .recipe-container-horizontal-top{
+                        // background-color: #2b3f5c;
+                        border: 1px solid #1fd660;
+                        flex:1;
+                        min-height: 190px;
+
+                        li{
+                            color: white;
+                        }
+                    }
+
+                    .recipe-container-horizontal-bottom{
+                        // background-color: #2b3f5c;
+                        margin-top: 20px;
+                        border: 1px solid #1fd660;
+                        flex: 1;
+                        min-height: 190px;
+
+                        li{
+                            color: white;
+                        }
+                    }
+                }
+            }
+            
+        }
+    }
 }
+
 
 .random-recipe{
     margin: 3%;
     right: 0;
     display: flex;
     flex-direction: column;
-    height: 100%;
     flex: 2;
     max-width: 600px;
+    height: 100%;
 
     .cuisine-search-section{
         display: flex;
@@ -30,6 +136,7 @@
         .cuisine-search-section-top{
             display: flex;
             flex: 1;
+
             .cuisine-search-btn{
                 flex: 1;
                 min-width: 185px !important;
@@ -38,6 +145,7 @@
     
             #cuisine-input{
                 flex: 2;
+                max-height: 30px;
                 background-color: #1f2d41 !important;
                 resize: none;
                 outline: none;
@@ -65,7 +173,7 @@
     .list-of-recipies{
         flex: 1;
         overflow-y: scroll;
-        max-height: 800px;
+        max-height: 100vh;
         margin-top: 5%;
 
         #details-of-recipies{
@@ -73,59 +181,72 @@
             padding-left: 0 !important;
             padding-bottom: 0 !important;
             
-        
-            .recipe-content{
-                padding: 20px;
-                border: 1px solid #1fd660;
-                font-weight: bold;
-                margin-top: 10px;
-                // margin-bottom: 10px;
-                max-height: 200px;
+            .recipes-container{
                 display: flex;
-                
-                .recipe-info{
-                    flex: 2;
-                    overflow-x: scroll;
-
-                    .recipe-name{
-                        color: #1fd660;
-                    }
-            
-                    .recipe-time{
-                        color: #1fd660;
-                    }
-            
-                    .recipe-details{
-                        color: #1fd660;
-                    }
-
-                    .recipe-text{
-                        color: white;
-                        padding-left: 10px; 
-                        
-                    }
-                }
-                .recipe-img{
-                    flex: 1;
-                    margin: auto;
-                    text-align: center;
-
-                    img{
-                        filter: brightness(50%);
-                        border: 1px solid #1fd660;
-
-                        
-                    }
-
-                    :hover{
-                        filter: brightness(100%);
-                    }
-                }
+                height: 100%;
+                margin-bottom: 10px;
+                border: 1px solid #1fd660;
             }
+        
         }
     }
 }
 
+.recipe-content{
+    padding: 20px;
+    font-style: bold;
+    height: 100% !important;
+    display: flex;
+    
+    .recipe-info{
+        flex: 2;
+        overflow-x: scroll;
+
+        .recipe-name{
+            color: #1fd660;
+        }
+
+        .recipe-time{
+            color: #1fd660;
+        }
+
+        .recipe-details{
+            color: #1fd660;
+        }
+
+        .recipe-text{
+            color: white;
+            padding-left: 10px; 
+            
+        }
+    }
+
+    .recipe-img{
+        flex: 1;
+        margin: auto;
+        text-align: center;
+    
+        img{
+            filter: brightness(50%);
+            border: 1px solid #1fd660;
+             
+        }
+
+        :hover{
+            filter: brightness(100%);
+        }
+    
+        
+    }
+}
+
+.horizontal{
+    flex-direction: row !important;
+}
+
+.vertical{
+    flex-direction: column !important;
+}
 
 @media (max-width: 768px) {
     .food-section{
