Fixed the design of food section

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -21,7 +21,8 @@
 /* Padding below the footer and lighter body text */
 body {
   font-family: "Metropolis Regular" !important;
-  background-color: #172539 !important ;
+  background-color: #172539 !important;
+  // background-color: #f3f3f3 !important;
   text-decoration: none;
 }
 
