--- a/app/views/food/show.html.erb
+++ b/app/views/food/show.html.erb
@@ -120,7 +120,7 @@
         </div>
     </div>
 
-    <div id = "food-section-text-id" class = "food-section-text">
+    <div id = "food-section-text-id" class = "food-section-text animated fadeIn delay-1">
         <p> "Pick one method in order to get a recipe. You can either write your ingredients and get 
             few recipes or you can just randomly generate based on the cuisine or preference"
         </p>
