--- a/app/assets/stylesheets/food.scss
+++ b/app/assets/stylesheets/food.scss
@@ -1,6 +1,6 @@
 .food-section{
     height: 100%;
-    overflow: auto;
+    overflow-x: scroll;
     display: flex;
     align-items: stretch;
     flex: 1;
@@ -34,7 +34,7 @@
         
         .recipe-search-btn{
             flex:1;
-            max-width: 185px !important;
+            min-width: 185px !important;
         }
 
         .recipe-input{
@@ -71,11 +71,16 @@
                     flex: 1;
                     min-height: 400px;
                     border: 1px solid #1fd660;
+                    // border: 1px solid #233d63;
                     margin: 10px;
-                    // background-color: #2b3f5c;
+                    min-width: 180px;
+                    // background-color: #D3D3D3;
                     
                     li{
-                        color: white;
+                        min-width: 180px;
+                        max-height: 400px;
+                        overflow-y: scroll;
+                        
                     }
                 }
 
@@ -87,28 +92,41 @@
                     height: 100%;
                     max-height: 400px;
                     
+                    
 
 
                     .recipe-container-horizontal-top{
-                        // background-color: #2b3f5c;
                         border: 1px solid #1fd660;
+                        // border: 1px solid #233d63;
                         flex:1;
                         min-height: 190px;
+                        min-width: 200px;
+                        // background-color: #1f2d41;
+                        // background-color: #D3D3D3;
 
                         li{
-                            color: white;
+                            width: 100%;
+                            min-width: 180px;
+                            max-height: 190px;
+                            overflow-y: scroll;
                         }
                     }
 
                     .recipe-container-horizontal-bottom{
-                        // background-color: #2b3f5c;
                         margin-top: 20px;
                         border: 1px solid #1fd660;
+                        // border: 1px solid #233d63;
                         flex: 1;
                         min-height: 190px;
+                        min-width: 200px;
+                        // background-color: #1f2d41;
+                        // background-color: #D3D3D3;
 
                         li{
-                            color: white;
+                            width: 100%;
+                            min-width: 180px;
+                            max-height: 190px;
+                            overflow-y: scroll;
                         }
                     }
                 }
@@ -182,10 +200,19 @@
             padding-bottom: 0 !important;
             
             .recipes-container{
+                margin-top: 20px;
                 display: flex;
                 height: 100%;
-                margin-bottom: 10px;
+                max-height: 190px;
                 border: 1px solid #1fd660;
+                // border: 1px solid #233d63;
+                // background-color: #1f2d41;
+                // background-color: #f3f3f3;
+
+                li{
+                    max-height: 190px;
+                    overflow-y: scroll;
+                }
             }
         
         }
@@ -193,7 +220,7 @@
 }
 
 .recipe-content{
-    padding: 20px;
+    padding: 15px;
     font-style: bold;
     height: 100% !important;
     display: flex;
@@ -201,23 +228,26 @@
     .recipe-info{
         flex: 2;
         overflow-x: scroll;
+        overflow-y: scroll;
 
         .recipe-name{
-            color: #1fd660;
+            color: #1fd660; 
+            // color: #1853ab;
         }
 
         .recipe-time{
             color: #1fd660;
+            // color: #1853ab;
         }
 
         .recipe-details{
             color: #1fd660;
+            // color: #1853ab;
         }
 
         .recipe-text{
-            color: white;
+            color: #f3f3f3;
             padding-left: 10px; 
-            
         }
     }
 
@@ -227,16 +257,36 @@
         text-align: center;
     
         img{
-            filter: brightness(50%);
+            filter: brightness(85%);
             border: 1px solid #1fd660;
+            // border: 1px solid #233d63;
              
         }
 
         :hover{
             filter: brightness(100%);
         }
-    
-        
+       
+    }
+
+    .recipe-img-vertical{
+        flex: 1;
+        margin: auto;
+        margin-bottom: 10%;
+        text-align: center;
+        max-width: 150px;
+        max-height: 150px;
+
+        img{
+            filter: brightness(85%);
+            border: 1px solid #1fd660;
+            // border: 1px solid #233d63;
+             
+        }
+
+        :hover{
+            filter: brightness(100%);
+        }
     }
 }
 
@@ -249,10 +299,98 @@
 }
 
 @media (max-width: 768px) {
+
     .food-section{
         flex-direction: column;
+
+        .recipes-list{
+            margin-top: 10%;
+        }
+
+        .food-section-text{
+            position: absolute;
+            top: 50%;
+            left: 10%;
+            max-width: 500px;
+
+            p{
+                // color: #111a26;
+                color: grey;
+                font-size: 30px;
+                font-style: italic;
+                font-family: 'Times New Roman';
+            }
+        }
     }
 
+    .recipe-content{
+        padding: 10px;
+        max-width: 450px;
+
+        .recipe-img{
+            flex: 1;
+            margin: auto;
+            text-align: center;
+            max-width: 100px;
+            max-height: 100px;
+        
+            img{
+                filter: brightness(50%);
+                border: 1px solid #1fd660;
+                 
+            }
+    
+            :hover{
+                filter: brightness(100%);
+            }
+        
+            
+        }
+    }
+
+    .recipe-container-vertical{
+        flex: 1;
+        min-height: 400px;
+        border: 1px solid #1fd660;
+        margin: 10px;
+        min-width: 90px;
+        // background-color: #2b3f5c;
+        
+        li{
+            min-width: 90px;
+            max-height: 400px;
+            overflow-y: scroll;
+
+            .recipe-info{
+                max-height: 200px;
+            }
+
+            .recipe-img-vertical{
+                flex: 1;
+                margin: auto;
+                text-align: center;
+                max-width: 150px;
+                max-height: 150px;
+            
+                img{
+                    filter: brightness(50%);
+                    border: 1px solid #1fd660;
+                     
+                }
+        
+                :hover{
+                    filter: brightness(100%);
+                }
+            
+                
+            }
+            
+        }
+    }
+
+    .recipe-info-vertical{
+        flex: 1;
+    }
 }
 
 @for $i from 0 through 100 {
