--- a/app/assets/stylesheets/sidenavbar.scss
+++ b/app/assets/stylesheets/sidenavbar.scss
@@ -14,6 +14,7 @@
     background: #f3f3f3;
     color: #fff;
     transition: all 0.3s;
+    border-right: 1px solid #1f2d41;
 }
 
 #sidebar.active {
