Entertainment map with markers, routes and walking ETA

--- a/app/views/shared/_sidenavbar.html.erb
+++ b/app/views/shared/_sidenavbar.html.erb
@@ -15,7 +15,7 @@
             <% end %>
         </li>
         <li>
-            <%= link_to root_path, class: 'btn sidebar-btn', style: 'background-color: #1f4e94;', data: {turbolinks: false} do %>
+            <%= link_to entertainment_path, class: 'btn sidebar-btn', style: 'background-color: #1f4e94;', data: {turbolinks: false} do %>
                 <%= fa_icon('child 2x')%>
                 <b>Entertainment</b>
             <% end %>
