--- a/app/assets/stylesheets/entertainment.scss
+++ b/app/assets/stylesheets/entertainment.scss
@@ -2,10 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #emap {
-    height: 400px;  /* The height is 400 pixels */
-    width: 59%
-    //background-color: red;  /* The width is the width of the web page */
-   }
+  height: 600px;
+  width: 600px;
+  display: block;
+  margin: 5%;
+  border: 2px solid #1fd660; 
+  }
 
 .entertainment-section{
     height: 100%;
