--- a/app/assets/stylesheets/food.scss
+++ b/app/assets/stylesheets/food.scss
@@ -1,6 +1,6 @@
 .food-section{
     height: 100%;
-    overflow-x: scroll;
+    overflow: auto;
     display: flex;
     align-items: stretch;
     flex: 1;
@@ -52,7 +52,7 @@
     }
 
     .list-of-searched-recipes{
-        overflow-y: scroll;
+        overflow: auto;
         max-height: 100vh;
         margin-top: 9%;
 
@@ -79,7 +79,7 @@
                     li{
                         min-width: 180px;
                         max-height: 400px;
-                        overflow-y: scroll;
+                        overflow: auto;
                         
                     }
                 }
@@ -108,7 +108,7 @@
                             width: 100%;
                             min-width: 180px;
                             max-height: 190px;
-                            overflow-y: scroll;
+                            overflow: auto;
                         }
                     }
 
@@ -126,7 +126,7 @@
                             width: 100%;
                             min-width: 180px;
                             max-height: 190px;
-                            overflow-y: scroll;
+                            overflow: auto;
                         }
                     }
                 }
@@ -190,7 +190,7 @@
 
     .list-of-recipies{
         flex: 1;
-        overflow-y: scroll;
+        overflow: auto;
         max-height: 100vh;
         margin-top: 5%;
 
@@ -211,7 +211,7 @@
 
                 li{
                     max-height: 190px;
-                    overflow-y: scroll;
+                    overflow: auto;
                 }
             }
         
@@ -227,8 +227,8 @@
     
     .recipe-info{
         flex: 2;
-        overflow-x: scroll;
-        overflow-y: scroll;
+        overflow: auto;
+        overflow: auto;
 
         .recipe-name{
             color: #1fd660; 
