--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -1,3 +1,60 @@
-// Place all the styles related to the Recipes controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.main_saved_recipes{
+    display: flex;
+
+    .saved_recipes{
+        align-self: center;
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        margin: 8%;
+
+        .list_of_saved_recipes{
+            overflow: auto;
+            list-style-type: none;
+            width: 100%;
+            padding-left: 0 !important;
+            // padding-bottom: 0 !important;
+
+            .recipe-container{
+                flex: 1;
+                border: 1px solid #1fd660;
+                // border: 1px solid #233d63;
+                margin: 30px 10px 10px 10px;
+                min-width: 180px;
+                // background-color: #D3D3D3;
+                
+                li{
+                    min-width: 180px;
+                    max-height: 400px;
+                    height: 100%;
+                    overflow: auto;
+                    display: flex;
+                    align-items: stretch;
+
+                }
+            }
+        }
+    }
+
+    .image-container{
+        height: 100vh;
+        width: calc(100vw - 250px);
+        text-align: center;
+        flex: 1;
+        margin-top: 10%;
+        opacity: 0.2;
+        
+        p{
+            color: white;
+            font-size: 30px;
+            font-style: italic;
+        }
+    }
+}
+
+@media (max-width: 768px){
+    .saved_recipes{
+        min-width: 100vw;   
+        margin: 0;
+    }
+}
